--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <header class="header">
         <div class="container">
             <div class="header__content">
-                <h1 class="header__title">Kong: Skull Island</h1>
+                <h1 class="header__title">The Dark Knight</h1>
                 <p class="header__txt">The film takes the viewer to the 70s of the last century. The protagonist
                     organizes an expedition to the Skull island, always covered in fog, on which King Kong was once
                     caught to find the missing brother and some mysterious substance. During...</p>
@@ -209,7 +209,7 @@
         </section>
     </main>
     <footer class="footer">
-        <div class="container">
+        <div class="container">git
             <div class="footer__content">
                 <div class="footer__links">
                     <a href=""><img src="images/google.png" alt=""></a>
