--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="style/all.min.css">
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="style/media.css">
-    <title>Document</title>
+    <link rel="icon shurtcut" href="images/logo.png"> 
+    <title>Vee Cinema</title>
 </head>
 
 <body>
